--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,15 @@
 <html>
 <header>
-  <div class="graphicsArea">
+  <!-- <div class="graphicsArea">
     <a routerLink="/home" class="logo">
       <img src="assets/images/pinkbackground.jpg">
       </a>
-    </div>
+    </div> -->
 </header>
-
-<body>
   <div id="ticker">Where trivia goes to get even nerdier</div>    
-<img src="https://media4.giphy.com/media/KZysJjKb8XyQSXQZwl/giphy.gif?cid=ecf05e475w5dgyk0h5mq6jbg82fxhtjuynw56swwhuehoj89&rid=giphy.gif" alt="">
+  <img src="https://media4.giphy.com/media/KZysJjKb8XyQSXQZwl/giphy.gif?cid=ecf05e475w5dgyk0h5mq6jbg82fxhtjuynw56swwhuehoj89&rid=giphy.gif" alt="">
+<body>
+
     <button (click)="leaderboardRoute()">Leaderboard</button>
 
     <button (click)="playGameRoute()" (click)="playCount()">Play</button>
