--- a/src/app/game-modes/endless-trivia/endless-trivia.component.css
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.css
@@ -1,5 +1,5 @@
 body {
-    height: 90vh;
+    height: 93vh;
     width: 100vw;
     background: rgb(58,12,163);
     background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
@@ -7,7 +7,7 @@ body {
 }
 
 img {
-    max-height: 75vh;
+    max-height: 50vh;
     max-width: 95vw;
     padding-bottom: 10px;
 }
@@ -20,13 +20,14 @@ h1{
 .ticker {
     padding: 0vw 2.5vw 0vw 2.5vw;
     margin-bottom: 2vh;
-    width: 100vw;
+    width: auto;
     float: inline-end;
     background-color: #f72585;
     color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    border-radius: 0px 0px 10px 10px;
 }
 
 #score {
@@ -48,6 +49,7 @@ background-color: #4cc9f0;
 #q_title {
     width: 100%;
     padding: 2vw;
+    text-align: center;
 }
 
 #random_q {
@@ -61,6 +63,8 @@ color: white;
     margin: 0vw 2.5vw 0vw 2.5vw;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 #button_cont {
@@ -68,26 +72,39 @@ color: white;
     width: 95vw;
     position: fixed;
     bottom: 70px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 button, input  {
-    width: 90vw;
     margin: 0vw 5vw 0vw 5vw;
     height: 30px;
 }
 
 input {
+    width: 90vw;
     padding: 0px;
     margin-bottom: 5px;
+    /* border-radius: 15px; */
+    border: none;
 }
 
 button {
     border: none;
     border-radius: 15px;
-    color: #3a0ca3;
-    font-family: 'Roboto Slab', serif;
+    color: white;
+    font-family: 'Bangers', cursive;
     font-size: 15px;
     font-weight: 200;
+    width: 50vw;
+    background-color: #f72585;
+}
+
+button:hover {
+    background-color: #3a0ca3;
+    font-size: 16px;
 }
 /* PINK - #f72585
 PURP - #7209b7
