--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,14 +14,14 @@ h1 {
 
 .login-btn {
   margin:10px 10px;
-  width: 80px;
-  height: 40px;
+  width: 60px;
+  height: 30px;
   background-color: #39065a;
-  box-shadow: 2px 2px 7px #ec92cc;
+  /* box-shadow: 2px 2px 7px #ec92cc; */
   border: none;
   border-radius: 20px;
   color: #e4fbff;
-  font-size: 20px;
+  /* font-size: 20px; */
   font-weight: 600;
   cursor: pointer; 
   display: flex;
@@ -65,7 +65,6 @@ a {
 
 .back-btn {
   margin-left: 1em;
-
 }
 
 button {
@@ -73,11 +72,12 @@ button {
   width: 60px;
   height: 30px;
   background-color: #39065a;
-  box-shadow: 2px 2px 7px #ec92cc;
+  /* box-shadow: 2px 2px 7px #ec92cc; */
   border: none;
   border-radius: 20px;
   color: #e4fbff;
   font-size: 15px;
   font-weight: 600;
   cursor: pointer;
+  font-family: 'Poppins', sans-serif;
 }
