unbroke endless again

--- a/src/app/game-modes/endless-trivia/endless-trivia.component.html
+++ b/src/app/game-modes/endless-trivia/endless-trivia.component.html
@@ -7,7 +7,7 @@
 <body>
   <div class="ticker">
     <h1 id="score">SCORE: {{ user_score }}</h1>
-<h1 id="quit" (click)="gameOver()">QUIT</h1>
+<h1 routerLink="/home" id="quit" (click)="gameOver()">QUIT</h1>
   </div>
   <div id="q_cont">
     <h1 id="q_title">Question</h1>
