--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -1,17 +1,13 @@
-<header>
+<!-- <header>
     <div class="container">
       <nav>
           <ul>
-            <!-- <li><a routerLink="/signin">Login</a></li> -->
+            <li><a routerLink="/signin">Login</a></li>
           </ul>
         </nav>
       </div>
-  
-      <div class="GraphicsArea">
-        <img src="assets/images/giphiacircle.jpg" alt="Giphia Logo">
-      </div>
-  
-  </header>
+   
+  </header> -->
   
   <body>
       <button class = "endless" (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
