--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <html>
 <header>
 <button class="back-btn" (click)="backClick()">Back</button>
-<!-- <a routerLink="/home" class="logo">
-  <img src="assets/images/pinkbackground.jpg">
-  </a> -->
-<h1 routerLink="/home" id="title">Giphia</h1>
+<a routerLink="/home" class="logo">
+  <img src="assets/images/giphiacircle.png">
+  </a>
+<!-- <h1 routerLink="/home" id="title">Giphia</h1> -->
     <div class="login-wrapper">
       <h3 class="login-btn" (click)="onLogin()" *ngIf="!isAuthenticated">Login</h3>
       <button id="username" mat-button [matMenuTriggerFor]="beforeMenu" [style]="{display: !isAuthenticated ? 'none' : 'block'}">{{playerInfo.username}} </button>
