--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,8 @@
 <html>
 <header>
-  <!-- <div class="graphicsArea">
-    <a routerLink="/home" class="logo">
-      <img src="assets/images/pinkbackground.jpg">
-      </a>
-    </div> -->
+     <!-- <a routerLink="/home" class="logo">
+      <img src="assets/images/Giphiaplain.png">
+      </a> -->
 </header>
   <div id="ticker">Where trivia goes to get even nerdier</div>    
   <img src="https://media4.giphy.com/media/KZysJjKb8XyQSXQZwl/giphy.gif?cid=ecf05e475w5dgyk0h5mq6jbg82fxhtjuynw56swwhuehoj89&rid=giphy.gif" alt="">
