--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -14,10 +14,13 @@ h1:hover{
 }
 
 .logo{
-  height: 150px;
-  width: 200px;
+  max-width: 50vw;
   display: flex;
 
+}
+
+img {
+  max-width: 150px;
 }
 
 .login-btn {
