--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       <h3 class="login-btn" (click)="onLogin()" *ngIf="!isAuthenticated">Login</h3>
       <button id="username" mat-button [matMenuTriggerFor]="beforeMenu" [style]="{display: !isAuthenticated ? 'none' : 'block'}">{{playerInfo.username}} </button>
       <mat-menu #beforeMenu="matMenu" xPosition="before">
-        <button mat-menu-item>Player Stats</button>
+        <button mat-menu-item (click)="onPlayerStats()">Player Stats</button>
         <button mat-menu-item>Leaderboards</button>
         <button mat-menu-item (click)="onLogout()">Log Out</button>
       </mat-menu>
