--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -8,14 +8,14 @@
     justify-content:space-around;
     align-items:center;
     flex-direction: row;
-    color:white;  
+    color:white;
 }
 
 .avatar{
     border-radius: 50%;
     background-color:white;
     width: 100px;
-    height:100px; 
+    height:100px;
 }
 
 .verticalPipe{
@@ -31,8 +31,8 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    
-    
+
+
 
 }
 
@@ -41,13 +41,14 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-   
+
 }
 
 h1{
     padding-top:15px;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 100px;
+    margin-bottom: 30px;
 }
 
 h2{
