added some css to player profile

--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -1,11 +1,11 @@
 <body>
 <div class="playerHeaderSection informationContainer">
 
-   <i class="fas fa-glasses"></i><img class="avatar" src='' alt="" />
+   <i class="fas fa-glasses"></i><img class="avatar" src='https://avatars.dicebear.com/api/bottts/example.svg?colors%5B%5D=pink' alt="player-avatarOption" />
 
    <h1>{{playerName}}</h1>
 
-   <p>{{" Player since: " + signUpYear }}</p>
+   <p class="yearStarted">{{" Player since: " + signUpYear }}</p>
 
 </div>
 
@@ -15,12 +15,12 @@
  </div>
 
  <div class="playerStatsSection informationContainer"> 
-    <p>Games Played:</p>
+    <p class="games">Games Played:</p>
     <h2>{{numberOfGamesPlayed}}</h2>
 
     <div class="verticalPipe"></div>
 
-    <p>Player Ranking:</p>
+    <p class="ranking">Player Ranking:</p>
     <h2>{{playerRanking}}</h2>
  </div>
  
