--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,5 +14,21 @@
         <button mat-menu-item (click)="onLogout()">Log Out</button>
       </mat-menu>
     </div>
+
+    <!-- navigation for hamburger menu
+<div class="topnav">
+  <a routerLink="home" class="active">home</a>
+  Navigation links (hidden by default) -->
+  <!-- <div id="myLinks">
+    <a routerLink="leaderboard">Leaderboard</a>
+    <a routerLink="player-profile">Player Profile</a>
+    <a routerLink="gamemodes">Game Modes</a>
+  </div>
+  "Hamburger menu" / "Bar icon" to toggle the navigation links
+  <a href="javascript:void(0);" class="icon" (click)="hamburgerFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div> -->
+
 </header>
 </html>
