--- a/src/app/game-modes/game-modes.component.css
+++ b/src/app/game-modes/game-modes.component.css
@@ -48,7 +48,14 @@ display:flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
-margin:11px 20px;
+margin: 0 auto;
 align-content: space-between;
 
 };
+
+.btn-cards {
+  margin: 0 auto;
+}
+
+
+ 
