--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -1,20 +1,12 @@
-<!-- <header>
-    <div class="container">
-      <nav>
-          <ul>
-            <li><a routerLink="/signin">Login</a></li>
-          </ul>
-        </nav>
-      </div>
-   
-  </header> -->
+<div class="mode-wrapper">
+
+  <div class="btn-cards">
+    <button class = "endless" (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
+  </div>
+  <div class="btn-cards">
+    <button class = "timed" (click)="timeChallengeGame()" (click)="playCount()">Play Time Challenge</button>
+  </div>
+    
+    
+</div>
   
-  <body>
-      <button class = "endless" (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
-      <!-- <li><a routerLink="/leaderboard">Leaderboard</a></li> -->
-  
-      <button class = "timed" (click)="timeChallengeGame()" (click)="playCount()">Play Time Challenge</button>
-      <!-- <li><a routerLink="/game-modes">Play</a></li> -->
-  </body>
-  
-<router-outlet></router-outlet>
