--- a/src/app/game-modes/time-challenge/time-challenge.component.css
+++ b/src/app/game-modes/time-challenge/time-challenge.component.css
@@ -1,8 +1,18 @@
+html {
+  background: rgb(58, 12, 163);
+  background: linear-gradient(
+    180deg,
+    rgba(58, 12, 163, 1) 0%,
+    rgba(114, 9, 183, 1) 94%
+  );
+}
+
 .blocks {
   display: flex;
   justify-content: center;
-  margin-bottom: 2%;
+  background-color: #f72585;
 }
+
 #startbutton {
   width: 110px;
   height: 40px;
@@ -12,7 +22,7 @@
   border-radius: 5px;
   color: #e4fbff;
   font-size: 18px;
-  box-shadow: 2px 2px 7px #ea0599;
+  /* box-shadow: 2px 2px 7px #ea0599; */
 }
 #pausebutton {
   width: 110px;
@@ -23,7 +33,7 @@
   border-radius: 5px;
   color: #e4fbff;
   font-size: 18px;
-  box-shadow: 2px 2px 7px #ea0599;
+  /* box-shadow: 2px 2px 7px #ea0599; */
 }
 #resetbutton {
   width: 110px;
@@ -34,7 +44,7 @@
   border-radius: 5px;
   color: #e4fbff;
   font-size: 18px;
-  box-shadow: 2px 2px 7px #ea0599;
+  /* box-shadow: 2px 2px 7px #ea0599; */
 }
 #timerbutton {
   width: 150px;
@@ -42,11 +52,14 @@
   margin: 5px;
   padding-top: 10px;
   background-color: #39065a;
-  box-shadow: 2px 2px 7px #ea0599;
+  /* box-shadow: 2px 2px 7px #ea0599; */
   border: none;
   border-radius: 5px;
   color: #e4fbff;
   text-align: center;
+  font-family: "Bangers", cursive;
+  font-size: 15px;
+  font-weight: 200;
 }
 .time-count {
   margin-top: 10;
@@ -57,16 +70,20 @@
   margin: auto;
 }
 
-.hidden{
+section {
+  margin: 0px;
+}
+
+.hidden {
   display: none;
 }
- 
+
 #gameOver {
-  font-family: Arial, Helvetica, sans-serif;
-  display:flex;
-  justify-content:center;
+  font-family: "Bangers", cursive;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  position:absolute;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -77,53 +94,68 @@
   background-color: #39065a;
 }
 
-#endingParagraph{
-  display:flex;
-  color:white;
+#endingParagraph {
+  display: flex;
+  color: white;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   font-size: 30px;
   font-weight: 200;
-  color:#ea0599;
-  padding-top:50px;
+  color: #ea0599;
+  padding: 20vh 5vw 10vh 5vw;
+  height: 100px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  /* line-height: 1.6px; */
 }
 
-.replay{
-  display:flex;
-  justify-content:center;
+#end_button_cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+}
+
+.replay {
+  display: flex;
+  justify-content: center;
   align-items: center;
   font-size: 20px;
-  font-weight:300;
+  font-weight: 300;
+  color: white;
 }
 
-.clickStart{
-  display:flex;
-  color:white;
-  justify-content:center;
+.clickStart {
+  display: flex;
+  color: white;
+  justify-content: center;
   align-items: center;
-  font-weight:100;
-  font-size:17px;
-  color:white;
+  font-weight: 300;
+  font-size: 20px;
+  color: white;
 }
 
-.endingHeader{
+.endingHeader {
+  padding: 10vh 0vw 5vh 0vw;
   font-size: 50px;
-  
+  font-family: "Bangers", cursive;
+  color: white;
+  text-align: center;
 }
 
-button.replay{
-  display:flex;
-  justify-content:center;
+button.replay {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-button{
-  display:flex;
-  justify-content:center;
+button {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-#wrongAnswerPopUp{
+/* #wrongAnswerPopUp {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -139,101 +171,117 @@ button{
   outline-offset: -30px;
 }
 
-#correctAnswerPopUp{
+#correctAnswerPopUp {
   position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: green;
-    width: 100px;
-    height: 100px;
-    padding: 50px 30px 10px 30px;
-    text-align: center;
-    z-index: 100;
-    color: white;
-    outline: 10px solid #ffff;
-    outline-offset: -30px;
-} 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: green;
+  width: 100px;
+  height: 100px;
+  padding: 50px 30px 10px 30px;
+  text-align: center;
+  z-index: 100;
+  color: white;
+  outline: 10px solid #ffff;
+  outline-offset: -30px;
+} */
 
 body {
   height: 90vh;
   width: 100vw;
-  background: rgb(58,12,163);
-  background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
   padding: 0px;
 }
 
 img {
-  max-height: 75vh;
+  max-height: 40vh;
   max-width: 95vw;
   padding-bottom: 10px;
 }
 
-h1{
-  font-family: 'Roboto Slab', serif;
+h1 {
+  font-family: "Roboto Slab", serif;
   margin: 0px;
 }
 
 .ticker {
   padding: 0vw 2.5vw 0vw 2.5vw;
-  margin-bottom: 2vh;
-  width: 100vw;
+  width: auto;
   float: inline-end;
   background-color: #f72585;
   color: white;
+  border-radius: 0px 0px 10px 10px;
 }
 
 #q_cont {
-background-color: #4cc9f0;
+  background-color: #4cc9f0;
   border-radius: 15px;
   width: 95vw;
-  margin: 0vw 2.5vw 5vw 2.5vw;
+  margin: 2vh 2.5vw 5vw 2.5vw;
   box-shadow: 1px 1px 5px 1px #3a0ca3;
 }
 
 #q_title {
   width: 100%;
   padding: 2vw;
+  text-align: center;
 }
 
 #random_q {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   padding: 2vw;
 }
 
 #h_cont {
-color: white;
+  color: white;
   width: 95vw;
   margin: 0vw 2.5vw 0vw 2.5vw;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 #button_cont {
   display: block;
-  width: 95vw;
+  width: 100vw;
   position: fixed;
-  bottom: 70px;
+  bottom: 60px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-button, input  {
-  width: 90vw;
+button,
+input {
   margin: 0vw 5vw 0vw 5vw;
   height: 30px;
 }
 
 input {
+  width: 90vw;
   padding: 0px;
   margin-bottom: 5px;
+  /* border-radius: 15px; */
+  border: none;
 }
 
 button {
   border: none;
   border-radius: 15px;
-  color: #3a0ca3;
-  font-family: 'Roboto Slab', serif;
+  color: white;
+  font-family: "Bangers", cursive;
   font-size: 15px;
   font-weight: 200;
+  width: 50vw;
+  background-color: #f72585;
+}
+
+button:hover {
+  background-color: #3a0ca3;
+  font-size: 16px;
+  transition: 0.3s ease-in-out;
 }
 
 /* PINK - #f72585
@@ -241,3 +289,18 @@ PURP - #7209b7
 DPRP - #3a0ca3
 BLUE - #4361ee
 CYAN - #4cc9f0 */
+
+/* tablet screen */
+/* @media only screen and (min-width: 376px){ */
+/* img {
+      /* max-width: 100vw;
+      padding: 10px 10px 10px 40vw;
+      display: flex;
+      align-content: stretch;
+      transition: 0.3s ease-in; */
+/* } */
+
+/* computer screen
+   @media only screen and (min-width: 768px){ */
+
+/* } */
