--- a/src/app/game-modes/time-challenge/time-challenge.component.html
+++ b/src/app/game-modes/time-challenge/time-challenge.component.html
@@ -1,56 +1,66 @@
-<h1>Time Challenge</h1>
-<section class="blocks">
-<button id="startbutton" (click)='startTimer()' [disabled]="timeLeft < 60 ? false : true">Start</button>
-<button id="pausebutton" (click)='pauseButton()'>Pause</button>
-<button id="resetbutton" (click)='resetButton()'>Reset</button>
-<div id="timerbutton">{{timeLeft}} Seconds left...</div>
-</section>
-
-<head>
+<!-- <h1>Time Challenge</h1> -->
+<html>
+  <section class="blocks">
+    <button
+      id="startbutton"
+      (click)="startTimer()"
+      [disabled]="timeLeft < 60 ? false : true"
+    >
+      Start
+    </button>
+    <!-- <button id="pausebutton" (click)="pauseButton()">Pause</button> -->
+    <button id="resetbutton" (click)="resetButton()">Reset</button>
+    <div id="timerbutton">{{ timeLeft }} Seconds</div>
+    <div
+      class="game-assets"
+      [style.display]="timeLeft === 0 ? 'none' : 'block'"
+    ></div>
+  </section>
+  <div class="ticker">
+    <h1>SCORE: {{ user_score }}</h1>
+  </div>
+  <!-- <head>
   <script
     src="https://kit.fontawesome.com/841224f046.js"
     crossorigin="anonymous"
   ></script>
-</head>
+</head> -->
+  <body>
+    <div id="q_cont">
+      <h1>Question</h1>
+      <div>{{ randomQuestion }}</div>
+    </div>
+    <div id="h_cont">
+      <img src="{{ giphHint }}" alt="" />
+      <button id="next_hint" (click)="nextGiphHint()">Next Hint</button>
+    </div>
+    <div id="button_cont">
+      <input
+        id="user_answer"
+        type="text"
+        placeholder="  Your answer"
+        [(ngModel)]="user_answer"
+      />
+      <button
+        (click)="submitAnswer()"
+        [disabled]="timeLeft === 0 ? true : false"
+      >
+        Submit
+      </button>
+    </div>
 
-<body>
-
-  <div class="game-assets" [style.display]="timeLeft === 0 ? 'none' : 'block'">
-  <div class="ticker">
-    <h1>QUESTIONS:</h1>
-    <h1>SCORE: {{ user_score }}</h1>
-  </div>
-  <div id="q_cont">
-    <h1>Question</h1>
-    <div>{{ randomQuestion }}</div>
-  </div>
-  <div id="h_cont">
-    <h1>Hint</h1>
-    <img src="{{ giphHint }}" alt="" />
-  </div>
-  <div id="button_cont">
-    <button id="next_hint" (click)="nextGiphHint()">Next Hint</button>
-    <input
-      id="user_answer"
-      type="text"
-      placeholder="Your answer"
-      [(ngModel)]="user_answer"
-    />
-    <button (click)="submitAnswer()" [disabled]="timeLeft === 0 ? true : false" >Submit</button>
-  </div>
-
-  <div *ngIf="isShownTrue" id="correctAnswerPopUp">Correct!</div>
-  <div *ngIf="isShownWrong" id="wrongAnswerPopUp"> Wrong!</div>
-
-</div>
+    <div *ngIf="isShownTrue" id="correctAnswerPopUp">Correct!</div>
+    <div *ngIf="isShownWrong" id="wrongAnswerPopUp">Wrong!</div>
 
     <!-- End of Game Pop-up -->
-    <div [style.display]="timeLeft === 0 ? 'block' : 'none'" id="gameOver" > 
-    <h1 class="endingHeader">Game Over!</h1>
-           <p id="endingParagraph">Don't worry. You can play again!</p>
-           <button class="replay"(click)="resetButton()">Play Again</button>
-           <p class="clickStart">Press Play Again to restart game.</p>
-           <button class="clickHome" (click)="homeClick()">Home</button>
-        </div>
-  
-</body>
+    <div [style.display]="timeLeft === 0 ? 'block' : 'none'" id="gameOver">
+      <h1 class="endingHeader">Game Over!</h1>
+      <p id="endingParagraph">Don't worry. You can play again!</p>
+      <div id="end_button_cont">
+        <button class="replay" (click)="resetButton()">Play Again</button>
+        <!-- <p class="clickStart">Press Play Again to restart game.</p> -->
+        <button class="clickHome" (click)="homeClick()">Home</button>
+      </div>
+    </div>
+  </body>
+</html>
