--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+/* mobile screen */
 html {
   background: rgb(58,12,163);
   background: linear-gradient(180deg, rgba(58,12,163,1) 0%, rgba(114,9,183,1) 94%);
@@ -68,7 +69,7 @@ button:hover{
 
 img {
   max-width: 80vw;
-padding: 0px 0px 10px 10vw;
+  padding: 0px 0px 10px 10vw;
   display:flex;
   align-items: center;
   justify-content: center;
@@ -111,3 +112,93 @@ padding: 0px 0px 10px 10vw;
     top:299px;
     right:18px;
    } */
+
+   /* tablet screen */
+   @media only screen and (min-width: 376px){
+    img {
+      max-width: 100vw;
+      padding: 0px 10px 10px 18vw;
+      display: flex;
+      align-content: stretch;
+      transition: 0.5s ease-in;
+      }
+
+      button{
+        width: 175px;
+        height: 75px;
+        background-color: #39065a;
+        border: none;
+        border-radius: 20px;
+        color: #e4fbff;
+        font-size: 24px;
+        cursor: pointer;
+        display: flex;
+        align-items: center; 
+        justify-content: center;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        flex-direction: row;
+    }
+    .button-container{
+      display: flex;
+      padding-top: 10%;
+    }
+    #ticker {
+      background-color: #f72585;
+      color: white;
+      height: 25px;
+      border-radius: 0px 0px 10px 10px;
+      padding-top: 1vh;
+      margin: 0vh 0vh 10vh 0vh;
+      text-align: center;
+      font-family: 'Poppins', sans-serif;
+      font-size: 20px;
+      transition: .5s ease-in;
+    }
+   }
+  /* computer screen */
+   @media only screen and (min-width: 769px){
+    img {
+      max-width: 140vw;
+      padding: 10px 10px 10px 26vw;
+      display: flex;
+      align-content: stretch;
+      transition: 0.5s ease-in;
+      }
+
+      button{
+        width: 220px;
+        height: 100px;
+        background-color: #39065a;
+        border: none;
+        border-radius: 20px;
+        color: #e4fbff;
+        font-size: 30px;
+        cursor: pointer;
+        display: flex;
+        align-items: center; 
+        justify-content: center;
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        flex-direction: row;
+    }
+    .button-container{
+      display: flex;
+      padding-top: 10%;
+    }
+    #ticker {
+      background-color: #f72585;
+      color: white;
+      height: 25px;
+      border-radius: 0px 0px 10px 10px;
+      padding-top: 1vh;
+      margin: 0vh 0vh 10vh 0vh;
+      text-align: center;
+      font-family: 'Poppins', sans-serif;
+      font-size: 30px;
+      transition: .5s ease-in;
+    }
+   }
+
+    
+  
