--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,15 +5,15 @@
       </a> -->
 </header>
   <div id="ticker">Where trivia goes to get even nerdier</div>    
-  <img src="https://media4.giphy.com/media/KZysJjKb8XyQSXQZwl/giphy.gif?cid=ecf05e475w5dgyk0h5mq6jbg82fxhtjuynw56swwhuehoj89&rid=giphy.gif" alt="">
-<body>
-
+    <img src="https://media4.giphy.com/media/KZysJjKb8XyQSXQZwl/giphy.gif?cid=ecf05e475w5dgyk0h5mq6jbg82fxhtjuynw56swwhuehoj89&rid=giphy.gif" alt="">
+    <body>
+  <div class="button-container">
     <button (click)="leaderboardRoute()">Leaderboard</button>
 
     <button (click)="playGameRoute()" (click)="playCount()">Play</button>
 
     <button (click)="playerStats()">Player Stats</button>
-
+  </div>
 </body>
 
 <div class="circles-image" id="hidden" alt="circles-illustration">
