--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -1,7 +1,7 @@
-<div class="graphicsArea">
+<!-- <div class="graphicsArea">
     <img src="assets/images/giphiacircle.jpg" alt="Giphia Logo">
-    </div>
-    
+    </div> -->
+ <body>   
 <div class="leaderboard">
     <h1>High Scores</h1>
 
@@ -16,4 +16,7 @@
 </div>
 
 <button (click)="playGameRoute()" (click)="playCount()" >Play</button>
+
+</body>
+
 
