--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -25,8 +25,10 @@
     <h2>{{playerRanking}}</h2>
  </div>
 
+ <div class="buttonGroup">
  <button class="playbutton" (click)="playCount()"(click)="playGameRoute()" >Play</button>
  <button class="createAvatarbutton" (click)="CreateAvatarRoute()">Create Avatar</button>
  <button class="resetStatsButton" >Reset Stats</button>
+ </div>
  <!-- <button id="resetStats" (click)="resetStats()">Reset Stats</button> -->
 </body>
