game-modes styling

--- a/src/app/game-modes/game-modes.component.css
+++ b/src/app/game-modes/game-modes.component.css
@@ -24,9 +24,10 @@ body{
 }
 
 .endless, .timed{
+    top: 30%;
     width: 200px;
     height: 80px;
-    margin:11px 20px;
+    margin: 100px auto 0;
     background-color: #39065a;
     border: none;
     border-radius: 20px;
@@ -41,14 +42,57 @@ body{
     font-weight: 600;
     flex-direction: row;
   }
-  
+
 button{
 height:30px;
 display:flex;
 flex-direction: row;
 align-items: center;
 justify-content: center;
-margin:11px 20px;
+margin: 0 auto;
 align-content: space-between;
 
 };
+
+.btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+h3 {
+  color: white;
+  text-align: center;
+}
+
+mat-card {
+  border-radius: 15px;
+  border-top: 10px solid  #4CC9F0;
+  width: 40%;
+  margin: 0 auto 50px;
+  height: 40%;
+}
+
+mat-card-content {
+  margin-top: 10px;
+  text-align: center;
+  font-weight: 550;
+  font-size: 1.1em;
+}
+
+.cards-wrapper {
+  margin-top: 10%;
+}
+
+hr {
+  margin: 20px 20px;
+}
+
+@media only screen and (min-width: 600px) {
+
+  .cards-wrapper {
+    display: flex;
+    height: 50%;
+  }
+
+}
