--- a/src/app/game-modes/game-modes.component.html
+++ b/src/app/game-modes/game-modes.component.html
@@ -1,20 +1,19 @@
-<!-- <header>
-    <div class="container">
-      <nav>
-          <ul>
-            <li><a routerLink="/signin">Login</a></li>
-          </ul>
-        </nav>
-      </div>
-   
-  </header> -->
-  
-  <body>
+<body>
+
+  <div class="cards-wrapper">
+    <mat-card>
       <button class = "endless" (click)="endlessTriviaGame()" (click)="playCount()">Play Endless Trivia</button>
-      <!-- <li><a routerLink="/leaderboard">Leaderboard</a></li> -->
-  
+      <hr>
+      <mat-card-content>See how many questions you can answer before hitting three strikes!</mat-card-content>
+    </mat-card>
+
+    <mat-card>
       <button class = "timed" (click)="timeChallengeGame()" (click)="playCount()">Play Time Challenge</button>
-      <!-- <li><a routerLink="/game-modes">Play</a></li> -->
-  </body>
-  
-<router-outlet></router-outlet>
+      <hr>
+      <mat-card-content>Try to answer as many questions as you can before the time runs out!</mat-card-content>
+    </mat-card>
+  </div>
+
+</body>
+
+
