--- a/src/app/player-profile/player-profile.component.css
+++ b/src/app/player-profile/player-profile.component.css
@@ -31,9 +31,6 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-
-
-
 }
 
 .higestScoreSection{
@@ -41,7 +38,6 @@
     flex-direction: column;
     justify-content: center;
     align-items:center;
-
 }
 
 h1{
@@ -64,7 +60,7 @@ p{
     color:white;
     font-weight: 400;
     line-height: 35px;
-    font-family: 'Roboto Slab', serif;    
+    font-family: 'Roboto Slab', serif;
 }
 
 
@@ -108,6 +104,10 @@ body {
     color:white;
 }
 
+#date {
+  color: #f72585;
+}
+
 .ranking{
     font-size: 25px;
     font-family: 'Roboto Slab', serif;
@@ -130,11 +130,11 @@ body {
   /* tablet screen */
   @media only screen and (min-width: 376px){
 
-    
+
       }
-   
+
   /* computer screen */
    @media only screen and (min-width: 768px){
 
-   
+
    }
